Added brier score

--- a/notebooks/IMDB/IMDB Fastext.ipynb
+++ b/notebooks/IMDB/IMDB Fastext.ipynb
@@ -692,6 +692,7 @@
     "train_cross_entropys = []\n",
     "train_abs_calibration = []\n",
     "train_mse_calibration = []\n",
+    "train_brier_calibration = []\n",
     "\n",
     "val_eces = []\n",
     "val_max_eces = []\n",
@@ -699,6 +700,7 @@
     "val_cross_entropys = []\n",
     "valid_abs_calibration = []\n",
     "valid_mse_calibration = []\n",
+    "valid_brier_calibration = []\n",
     "\n",
     "for j in range(1, 50):\n",
     "    print(f'epoch {j}')\n",
@@ -725,6 +727,8 @@
     "    train_accs.append(train_cat_acc)\n",
     "    train_cross_entropy = metrics.log_loss(y_train, preds_train)\n",
     "    train_cross_entropys.append(train_cross_entropy)\n",
+    "    train_brier = metrics.brier_score_loss(y_train, preds_train)\n",
+    "    train_brier_calibration.append(train_brier)\n",
     "    \n",
     "    train_empirical_probs, train_predicted_probs= calibration_curve(y_train , conf_train,n_bins=15)\n",
     "    train_abs_cal = abs(train_empirical_probs - train_predicted_probs).mean()\n",
@@ -732,7 +736,8 @@
     "    train_abs_calibration.append(train_abs_cal)\n",
     "    train_mse_calibration.append(train_mse_cal)\n",
     "    print(f'Train: ece {train_ece:.2f} max ece {train_max_ece:.2f} acc '\n",
-    "          f'{train_cat_acc:.2f} entropy {train_cross_entropy:.2f}'\n",
+    "          f'{train_cat_acc:.2f} entropy {train_cross_entropy:.2f} '\n",
+    "          f'brier {train_brier:.2f} '\n",
     "          f'cal abs {train_abs_cal:.2f} cal mse {train_mse_cal:.2f}')\n",
     "    \n",
     "    val_ece = ece(preds_val_labels, conf_val, y_test, n_bins=15)\n",
@@ -743,6 +748,8 @@
     "    val_accs.append(val_cat_acc)\n",
     "    val_cross_entropy = metrics.log_loss(y_test, preds_val)\n",
     "    val_cross_entropys.append(val_cross_entropy)\n",
+    "    valid_brier = metrics.brier_score_loss(y_test, preds_val)\n",
+    "    valid_brier_calibration.append(train_brier)\n",
     "    \n",
     "    valid_empirical_probs, valid_predicted_probs= calibration_curve(y_test , conf_val,n_bins=15)\n",
     "    val_abs_cal = abs(valid_empirical_probs - valid_predicted_probs).mean()\n",
@@ -750,7 +757,8 @@
     "    valid_abs_calibration.append(val_abs_cal)\n",
     "    valid_mse_calibration.append(val_mse_cal)\n",
     "    print(f'Val: ece {val_ece:.2f} max ece {val_max_ece:.2f} '\n",
-    "          f'acc {val_cat_acc:.2f} entropy {val_cross_entropy:.2f}'\n",
+    "          f'acc {val_cat_acc:.2f} entropy {val_cross_entropy:.2f} '\n",
+    "          f'brier {valid_brier:.2f} '\n",
     "          f'cal abs {val_abs_cal:.2f} cal mse {val_mse_cal:.2f}')"
    ]
   },
